# dependabot-notifications

./: README.md  pyproject.toml
.github/: dependabot.yml
